[gd_scene load_steps=7 format=3 uid="uid://b1kmbrwgk8so1"]

[ext_resource type="Script" uid="uid://dr7maxxlou66f" path="res://scriptsP/player.gd" id="1_cxr5p"]
[ext_resource type="Script" uid="uid://ds64ynt00si3k" path="res://scriptsP/attribute_manager.gd" id="2_e80uo"]
[ext_resource type="Script" uid="uid://b1ulnfh2lfyv0" path="res://scriptsP/HealthComponent.gd" id="3_cxr5p"]
[ext_resource type="Script" uid="uid://cdhbe88874hjj" path="res://scriptsP/resource_component.gd" id="4_tdg3f"]
[ext_resource type="Script" uid="uid://bhv4u3i04oi7h" path="res://scriptsP/combat_manager.gd" id="5_cxr5p"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dtqjt"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_cxr5p")

[node name="AttributeManager" type="Node" parent="."]
script = ExtResource("2_e80uo")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_cxr5p")

[node name="StaminaComponent" type="Node" parent="."]
script = ExtResource("4_tdg3f")

[node name="ManaComponent" type="Node" parent="."]
script = ExtResource("4_tdg3f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_dtqjt")
debug_color = Color(1, 1, 1, 0.41960785)

[node name="CombatManager" type="Node3D" parent="."]
script = ExtResource("5_cxr5p")
